fixed grid on mobiles one more time

--- a/src/app/content/about/about.component.css
+++ b/src/app/content/about/about.component.css
@@ -45,9 +45,11 @@ header h1 {
 }
 
 .profile-image {
+  /*TODO: hide me on mobiles*/
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  margin: auto;
 }
 
 .line {
